# gesture-gaze-extension

./: .gitignore  README.md  package.json  requirements.txt  webpack.config.js
extension/: README.md  manifest.json
extension/scripts/: background.js  content.js
extension/src/: background.js  camera.js  content.js  domFactory.js  entry.mjs  gesture.js  offscreen.js  popup.js  storageHelper.js  tfjs-bundle.mjs  tfjs-standalone.mjs  tfjs.mjs  welcome.js
extension/style/: material-icons.css
extension/test/: Stochastic differential equation - Wikipedia.html
extension/ui/: offscreen.html  popup.html  styles.css  welcome.html
notebooks/: ColumbiaPreprocessing.ipynb  Exp3_MobileNetV2.ipynb  MPIIFaceGaze_Preprocessing.ipynb  MobileNetV2_Columbia.ipynb  MobileNetV2_MPIIFaceGaze.ipynb  MobileNetV2_Synth.ipynb  MobileNetV2_Unity.ipynb  Preprocessing.ipynb  README.md  SynthGaze_Preprocessing.ipynb  Synth_DataAug_Exp.ipynb  Unity_Subset.ipynb  Visualize_Synth.ipynb  pyproject.toml
notebooks/Initial/: ImageNetColumbia.ipynb  MobileNetV2_Columbia.ipynb  MobileNetV2_Synth.ipynb  MobileNetV2_Unity.ipynb  ResNetv1.0.ipynb  Unity_Pretraining.ipynb  Unity_Pretraining_baseline.ipynb  baseline.ipynb
