[project]
name = "notebooks"
version = "0.1.0"
description = ""
authors = [
    {name = "Junkai Li",email = "junkai.li-2@student.uts.edu.au"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tensorflowjs (>=4.22.0,<5.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch_cpu"}
torchvision = {source = "pytorch_cpu"}
torchaudio = {source = "pytorch_cpu"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
